# anti-recommender

./: README.md  app.nix  compose.yaml  credentials  flake.nix  frontend.nix
anti-recommender-frontend/: package-lock.json  package.json
backend/: pyproject.toml
backend/src/backend/: hello.py  main.py
backend/src/backend/common/: result.py
backend/src/backend/schemas/: auth.py  recommend.py  spotify.py
backend/src/backend/services/: antirecommender.py  spotify.py  spotipy_client.py
backend/src/backend/services/spotify/: client.py
backend/src/backend/services/spotify/users/: app.py  dependencies.py
backend/src/backend/services/spotify/users/domain/: __init__.py  token_repository.py  user_repository.py
backend/src/backend/services/spotify/users/infra/: repository_implementation.py  spotify_token.py  spotify_user.py  sqlite.py
backend/src/backend/services/spotify/users/infra/spotify/: token.py  user.py
backend/src/backend/services/spotify/users/infra/sqlite/: token.py  users.py
backend/src/backend/spotify/: README.md  app.py  dependencies.py
backend/src/backend/spotify/domain/: __init__.py  token_repository.py  user_repository.py
backend/src/backend/spotify/infra/: repository_implementation.py
backend/src/backend/spotify/infra/spotify/: token.py  user.py
backend/src/backend/spotify/infra/sqlite/: token.py  users.py
backend/test/: test_spotify_app.py  test_sqlite_token.py  test_sqlite_users.py
backend/test/mothers/: token.py  user.py
frontend/: global.d.ts  index.html  package-lock.json  package.json  tsconfig.app.json  vite.prod.ts
(+33 files in other folders)
