[project]
name = "backend"
version = "0.1.0"
description = "Backend for anti recommender"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.6",
    "spotipy>=2.24.0",
    "uvicorn>=0.32.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
